--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,4 @@
 @import './common';
-@import './example';
+@import './base';
+@import './components/country-list';
+@import './components/country-info';
